--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://code.tidio.co/YOUR_TIDIO_CHATBOT_ID.js" async></script>
   </body>
 </html>
